...
                    }
                    Spacer()
                }
                .navigationTitle(Text(LocalizedStringKey("navTitleShopping")))
                .floatingActionButton(color: ColorConstants.mainGreen, image: Image(systemName: "plus").foregroundColor(.white), action: {
                    itemViewModel.showsBottomSheet = true
                }).accessibility(identifier: "openAddShoppingItemModal")
            }
            .task {
                await viewModel.performShoppingItemsFetch()
            }
            buildBottomsheet()
        }
...
