...
    
    func buildTopSearch() -> some View {
        VStack (alignment: .center) {
            CustomTextFieldView(text: $viewModel.searchInput, promptText: LocalizedStringKey("searchRecipeTextPrompt"),
                                onSubmit: { await viewModel.getRecipies() })
                .padding(.horizontal)
                .accessibility(identifier: "searchRecipeText")
            
            HStack {
                Button {
                    sheetViewModel.showsBottomSheet = true
                } label: {
                    HStack {
...
